Corrected data ingestion file.

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,29 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "id": "a6a9972f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/'"
+       "'/Users/yashasuttangi/Developer/MachineLearning/Projects/CancerClassification/Cancer-classification-end-to-end-using-MLFlow-and-DVC/research'"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import os\n",
-    "%pwd"
+    "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "id": "f7fb9f35",
    "metadata": {},
    "outputs": [],
@@ -34,17 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "id": "4f24870a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/'"
+       "'/Users/yashasuttangi/Developer/MachineLearning/Projects/CancerClassification/Cancer-classification-end-to-end-using-MLFlow-and-DVC'"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "id": "0bfa3085",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "dd8e475f",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4d3fb9ba",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6d67b53c",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fca804e7",
    "metadata": {},
    "outputs": [],
@@ -143,32 +143,79 @@
     "            file_id = dataset_url.split(\"/\")[-2]\n",
     "            prefix = \"https://drive.google.com/uc?/export=download&id=\"\n",
     "            gdown.download(prefix + file_id, zip_download_dir, quiet=False)\n",
-    "            logger.info*(f\"Downloaded data successfully!\")\n",
+    "            logger.info(f\"Downloaded data successfully!\")\n",
     "        except Exception as e:\n",
     "            raise e\n",
     "        \n",
-    "## Extract the zip file into the data directory\n",
-    "def extract_zip_file(self):\n",
-    "    unzip_path = self.config.unzip_dir\n",
-    "    os.makedirs(unzip_path, exist_ok=True)\n",
-    "    with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
-    "        logger.info(\"Extracting zip file...\")\n",
-    "        zip.extractall(unzip_path)\n",
-    "        logger.info(f\"Extracted zip file into dir: {unzip_path} and size\")"
+    "    ## Extract the zip file into the data directory\n",
+    "    def extract_zip_file(self):\n",
+    "        unzip_path = self.config.unzip_dir\n",
+    "        os.makedirs(unzip_path, exist_ok=True)\n",
+    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
+    "            logger.info(\"Extracting zip file...\")\n",
+    "            zip_ref.extractall(unzip_path)\n",
+    "            logger.info(f\"Extracted zip file into dir: {unzip_path} and size\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a72e497a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading yaml file : config/config.yaml\n",
+      "[2026-01-23 09:48:22,562: INFO: common]: YAML file: config/config.yaml loaded successfully\n",
+      "Reading yaml file : params.yaml\n",
+      "[2026-01-23 09:48:22,563: INFO: common]: YAML file: params.yaml loaded successfully\n",
+      "[2026-01-23 09:48:22,564: INFO: common]: created directory at : artifacts\n",
+      "[2026-01-23 09:48:22,565: INFO: common]: created directory at : artifacts/data_ingestion\n",
+      "[2026-01-23 09:48:22,565: INFO: 1838134735]: Downloading data from https://drive.google.com/file/d/1gBfjc4cPNRNxeRc-hSfh4GRmG7umkaFu/view?usp=sharing into file artifacts/data_ingestion/data.zip\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?/export=download&id=1gBfjc4cPNRNxeRc-hSfh4GRmG7umkaFu\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1gBfjc4cPNRNxeRc-hSfh4GRmG7umkaFu&confirm=t&uuid=f31eb2c1-57d8-4a6c-934e-56a8e482f5f7\n",
+      "To: /Users/yashasuttangi/Developer/MachineLearning/Projects/CancerClassification/Cancer-classification-end-to-end-using-MLFlow-and-DVC/artifacts/data_ingestion/data.zip\n",
+      "100%|██████████| 125M/125M [00:03<00:00, 39.5MB/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2026-01-23 09:48:27,655: INFO: 1838134735]: Downloaded data successfully!\n",
+      "[2026-01-23 09:48:27,666: INFO: 1838134735]: Extracting zip file...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2026-01-23 09:48:28,083: INFO: 1838134735]: Extracted zip file into dir: artifacts/data_ingestion and size\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
     "    data_ingestion_config = config.get_data_ingestion_config()\n",
     "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
-    "    data_ingestion.download_file()\n",
+    "    data_ingestion.download_data()\n",
     "    data_ingestion.extract_zip_file()\n",
     "except Exception as e:\n",
     "    raise e\n"
