data ingestion pipeline

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -73,13 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "dd8e475f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ChestCancerClassifer.utils.common import read_yaml, create_directories\n",
-    "from ChestCancerClassifer.constants import * "
+    "from ChestCancerClassifier.utils.common import read_yaml, create_directories\n",
+    "from ChestCancerClassifier.constants import * "
    ]
   },
   {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6d67b53c",
    "metadata": {},
    "outputs": [],
@@ -118,8 +118,8 @@
     "import os\n",
     "import zipfile\n",
     "import gdown \n",
-    "from ChestCancerClassifer import logger \n",
-    "from ChestCancerClassifer.utils.common import get_size"
+    "from ChestCancerClassifier import logger \n",
+    "from ChestCancerClassifier.utils.common import get_size"
    ]
   },
   {
