base model updated

--- a/research/02_base_model.ipynb
+++ b/research/02_base_model.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "9284fd72",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "5b538440",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "b5b32251",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "5bc5a5f5",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "e7d31c8f",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "381bb853",
    "metadata": {},
    "outputs": [
@@ -220,21 +220,19 @@
      "output_type": "stream",
      "text": [
       "Reading yaml file : config/config.yaml\n",
-      "[2026-01-27 23:56:15,817: INFO: common]: YAML file: config/config.yaml loaded successfully\n",
+      "[2026-01-28 00:26:41,192: INFO: common]: YAML file: config/config.yaml loaded successfully\n",
       "Reading yaml file : params.yaml\n",
-      "[2026-01-27 23:56:15,818: INFO: common]: YAML file: params.yaml loaded successfully\n",
-      "[2026-01-27 23:56:15,819: INFO: common]: created directory at : artifacts\n",
-      "[2026-01-27 23:56:15,820: INFO: common]: created directory at : artifacts/prepare_base_model\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-      "58889256/58889256 [==============================] - 2s 0us/step\n",
-      "[2026-01-27 23:56:18,615: WARNING: saving_utils]: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n",
-      "[2026-01-27 23:56:18,666: WARNING: optimizer]: At this time, the v2.11+ optimizer `tf.keras.optimizers.SGD` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.SGD`.\n",
-      "[2026-01-27 23:56:18,667: WARNING: __init__]: There is a known slowdown when using v2.11+ Keras optimizers on M1/M2 Macs. Falling back to the legacy Keras optimizer, i.e., `tf.keras.optimizers.legacy.SGD`.\n",
-      "Model: \"model\"\n",
+      "[2026-01-28 00:26:41,194: INFO: common]: YAML file: params.yaml loaded successfully\n",
+      "[2026-01-28 00:26:41,194: INFO: common]: created directory at : artifacts\n",
+      "[2026-01-28 00:26:41,195: INFO: common]: created directory at : artifacts/prepare_base_model\n",
+      "[2026-01-28 00:26:41,341: WARNING: saving_utils]: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n",
+      "[2026-01-28 00:26:41,377: WARNING: optimizer]: At this time, the v2.11+ optimizer `tf.keras.optimizers.SGD` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.SGD`.\n",
+      "[2026-01-28 00:26:41,378: WARNING: __init__]: There is a known slowdown when using v2.11+ Keras optimizers on M1/M2 Macs. Falling back to the legacy Keras optimizer, i.e., `tf.keras.optimizers.legacy.SGD`.\n",
+      "Model: \"model_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_1 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
+      " input_2 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
       "                                                                 \n",
       " block1_conv1 (Conv2D)       (None, 224, 224, 64)      1792      \n",
       "                                                                 \n",
@@ -272,13 +270,13 @@
       "                                                                 \n",
       " block5_pool (MaxPooling2D)  (None, 7, 7, 512)         0         \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 25088)             0         \n",
+      " flatten_1 (Flatten)         (None, 25088)             0         \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 2)                 50178     \n",
+      " dense_1 (Dense)             (None, 3)                 75267     \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 14,764,866\n",
-      "Trainable params: 50,178\n",
+      "Total params: 14,789,955\n",
+      "Trainable params: 75,267\n",
       "Non-trainable params: 14,714,688\n",
       "_________________________________________________________________\n"
      ]
@@ -299,6 +297,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d9c782c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04bad4a0",
    "metadata": {},
    "outputs": [],
    "source": []
